# cpp_server

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  try.py
fw/src/fw/common/: CMakeLists.txt
fw/src/fw/common/authorization/inc/: Authorization.h
fw/src/fw/common/authorization/pub/: AuthorizationTypes.h  IAuthorization.h
fw/src/fw/common/authorization/src/: authorization.cpp
fw/src/fw/common/data/: CMakeLists.txt
fw/src/fw/common/data/inc/: Data.h
fw/src/fw/common/data/pub/: IData.h  MockData.h
fw/src/fw/common/data/src/: Data.cpp
fw/src/fw/common/logging/: CMakeLists.txt  logger.cpp  logger.h
fw/src/fw/common/request/: CMakeLists.txt  request.cpp  request.h
fw/src/fw/common/response/: CMakeLists.txt  response.h
fw/src/fw/common/utilities/: CMakeLists.txt  Utils.h  utils.cpp
fw/src/fw/endpoints/: BaseEndpoint.h  CMakeLists.txt  ServiceRegistry.h
fw/src/fw/endpoints/Authentication/inc/: AuthenticationEndpoint.h
fw/src/fw/endpoints/Authentication/pub/: AuthenticationEndpointInjections.h  IAuthenticationEndpoint.h  MockIAuthenticationEndpoint.h
fw/src/fw/endpoints/Authentication/src/: AuthenticationEndpoint.cpp
fw/src/fw/endpoints/ExpenseManager/: CMakeLists.txt
fw/src/fw/endpoints/ExpenseManager/inc/: ExpenseManagerAccountsEndpoint.h  ExpenseManagerCategoriesEndpoint.h  ExpenseManagerEndpoint.h  ExpenseManagerEndpointInjections.h  ExpenseManagerReportsEndpoint.h  ExpenseManagerTagsEndpoint.h  ExpenseManagerTransactionsEndpoint.h  ExpenseManagerTransationsEndpoint.h
fw/src/fw/endpoints/ExpenseManager/pub/: ExpenseManagerInjections.h  IExpenseManagerAccountsEndpoint.h  IExpenseManagerCategoriesEndpoint.h  IExpenseManagerEndpoint.h  IExpenseManagerReportsEndpoint.h  IExpenseManagerTagsEndpoint.h  IExpenseManagerTransactionsEndpoint.h  IExpenseManagerTransationsEndpoint.h  MockIExpenseManagerAccountsEndpoint.h  MockIExpenseManagerCategoriesEndpoint.h  MockIExpenseManagerEndpoint.h  MockIExpenseManagerReportsEndpoint.h  MockIExpenseManagerTagsEndpoint.h  MockIExpenseManagerTransactionsEndpoint.h
fw/src/fw/endpoints/ExpenseManager/src/: ExpenseManagerAccountsEndpoint.cpp  ExpenseManagerCategoriesEndpoint.cpp  ExpenseManagerEndpoint.cpp  ExpenseManagerReportsEndpoint.cpp  ExpenseManagerTagsEndpoint.cpp  ExpenseManagerTransactionsEndpoint.cpp  ExpenseManagerTransationsEndpoint.cpp
fw/src/fw/endpoints/ExpenseManager/test/: ExpenseManagerAccountsEndpointTest.cpp  ExpenseManagerCategoriesEndpointTest.cpp  ExpenseManagerReportsEndpointTest.cpp  ExpenseManagerTagsEndpointTest.cpp  ExpenseManagerTransactionsEndpointTest.cpp
fw/src/fw/endpoints/Todo/inc/: TodoEndpoint.h  TodoEndpointInjections.h
fw/src/fw/endpoints/Todo/pub/: ITodoEndpoint.h  TodoEndpointTypes.h
fw/src/fw/endpoints/Todo/src/: TodoEndpoint.cpp
fw/src/fw/endpoints/Vfs/: CMakeLists.txt
fw/src/fw/endpoints/Vfs/pub/: IVfsEndpoint.h
fw/src/fw/endpoints/Vfs/src/: VfsEndpoint.cpp
fw/src/fw/endpoints/feature1/: CMakeLists.txt
fw/src/fw/endpoints/feature1/inc/: feature1.h
fw/src/fw/endpoints/feature1/pub/: MockIFeature1.h
fw/src/fw/endpoints/feature1/src/: feature1.cpp
fw/src/fw/services/: BaseService.h  CMakeLists.txt  customDataType.h
fw/src/fw/services/AuthenticationService/: CMakeLists.txt
fw/src/fw/services/Common/: CMakeLists.txt
fw/src/fw/services/Common/inc/: CommonService.h  UtilityService.h
fw/src/fw/services/ExpenseManager/: CMakeLists.txt
fw/src/fw/services/Todo/: CMakeLists.txt
fw/src/fw/services/feature1_service/: CMakeLists.txt
src/fw/common/authorization/: CMakeLists.txt
src/fw/common/authorization/pub/: IAuthorization.h
src/fw/common/authorization/src/: authorization.cpp
src/fw/common/data/: CMakeLists.txt
src/fw/common/data/inc/: Data.h
src/fw/common/data/pub/: IData.h
src/fw/common/data/src/: Data.cpp
src/fw/endpoints/: BaseEndpoint.h  CMakeLists.txt  ServiceRegistry.h
src/fw/endpoints/Authentication/: CMakeLists.txt
src/fw/endpoints/Authentication/inc/: AuthenticationEndpoint.h
src/fw/endpoints/Authentication/pub/: AuthenticationEndpointInjections.h  IAuthenticationEndpoint.h
src/fw/endpoints/Authentication/src/: AuthenticationEndpoint.cpp
src/fw/endpoints/Todo/: CMakeLists.txt
src/fw/endpoints/Todo/inc/: TodoEndpoint.h  TodoEndpointInjections.h
src/fw/endpoints/Todo/pub/: ITodoEndpoint.h  TodoEndpointTypes.h
src/fw/endpoints/Todo/src/: TodoEndpoint.cpp
src/fw/endpoints/Vfs/inc/: VfsEndpoint.h
src/fw/endpoints/feature1/pub/: Ifeature1.h
src/fw/endpoints/feature1/src/: feature1.cpp
src/fw/services/: BaseService.h  CMakeLists.txt  customDataType.h
src/fw/services/AuthenticationService/: CMakeLists.txt
src/fw/services/AuthenticationService/inc/: AuthenticationService.h
src/fw/services/AuthenticationService/pub/: AuthenticationServiceInjections.h  AuthenticationServiceTypes.h  IAuthenticationService.h
src/fw/services/AuthenticationService/src/: AuthenticationService.cpp  AuthenticationServiceeData.cpp
src/fw/services/Common/inc/: UtilityService.h
src/fw/services/Todo/: CMakeLists.txt
src/fw/services/Todo/inc/: TodoService.h  TodoServiceData.h
src/fw/services/Todo/pub/: ITodoService.h  ITodoServiceData.h  MockTodoService.h  MockTodoServiceData.h  TodoServiceInjections.h  TodoServiceTypes.h
src/fw/services/Todo/src/: TodoService.cpp  TodoServiceData.cpp
src/fw/services/Todo/test/: TodoServiceDataTest.cpp
src/fw/services/Vfs/: CMakeLists.txt
src/fw/services/Vfs/pub/: IVfsServiceData.h
src/fw/services/Vfs/src/: VfsService.cpp
src/fw/services/feature1_service/inc/: Feature1ServiceData.h
src/fw/services/feature1_service/pub/: IFeature1ServiceData.h  feature1_service_types.h
src/fw/services/feature1_service/src/: feature1_service.cpp
src/fw/services/feature1_service/test/: feature1_service_test.cpp
src/router/: CMakeLists.txt
src/router/inc/: router.h
src/router/pub/: IRouter.h  MockIRouter.h  RouterType.h  SubRouterMap.h  dependencies.json  registry.h
src/router/src/: router.cpp
src/server/: CMakeLists.txt
src/server/pub/: IServer.h
src/server/src/: server.cpp
(+219 files in other folders)
